fixed modal size for visible header

--- a/src/components/Hooks/useModal/modal.module.css
+++ b/src/components/Hooks/useModal/modal.module.css
@@ -1,9 +1,9 @@
 .backdrop {
   z-index: 1100;
   position: fixed;
-  top: 0;
+  top: 55px;
   width: 100%;
-  height: 100vh;  
+  height: calc(100vh - 55px);  
 
   display: grid;
   place-items: center;
@@ -14,23 +14,6 @@
 .close {
   display: none;
 }
-
-/* modal */
-/* 
-.modal {
-  position: relative;
-  font-family: var(--font-main);
-
-  display: grid;
-  row-gap: 0.75em;
-
-  max-width: 45vw;
-  max-height: 90vh;
-  height: auto;
-  background: var(--bg);
-  border: var(--section-border);
-  padding: 1rem;
-} */
 
 /* custom scroll bar for non-mobile */
 @media screen and (min-width: 768px) {
